--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -276,7 +276,7 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
 
 Kurzbeschreibung: Beim Starten der App durch den Nutzer startet automatisch der Laufmodus. Der Nutzer kann nun entweder den Modus wechseln oder einen Vorgang starten. Nach Beendigung oder Stoppen des Vorgangs wird das Vorgangsresultat angezeigt. Der Nutzer kann außerdem die Vorgangsdaten des letzten Monats einsehen und seine Daten importieren/exportieren. Das Ändern von Einstellungen und der damit verbundenen Steuerungsparameter der \Gls{Earables} ist ebenfalls möglich.
 \section{Benutzeroberfläche}
-Die \Gls{GUI} wird durch die App realisiert. Dabei kann man die einzelnen Modi über das Navigationsmenu auswählen. Jeder Modus hat zwei Seiten; eine Übersichtsseite und eine aktive Seite, welche während des aktiven \Gls{Vorgang} angezeigt wird. Für die weiteren Funktionen(Einstellungen, Dateienexport/-import) bietet die Applikation ebenfalls spezielle Seiten an.
+Die \Gls{GUI} wird durch die App realisiert. Dabei kann man die einzelnen Modi über das Navigationsmenü auswählen. Jeder Modus hat zwei Seiten; eine Übersichtsseite und eine aktive Seite, welche während des aktiven \Gls{Vorgang} angezeigt wird. Für die weiteren Funktionen(Einstellungen, Dateienexport/-import) bietet die Applikation ebenfalls spezielle Seiten an.
 Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools "Mock-up" über den angegebenen Link in der Fußnote \footnote[1]{Mock-Up Prototyp: https://app.moqups.com/448nRiafse/view/page/a70dc1e41?ui=0}
 
 
@@ -336,7 +336,7 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools "Mock-up" über den
 	\centering
 	\begin{minipage}{0.4\textwidth}
 		\includegraphics[width=4cm,height=9cm]{./Benutzeroberflaeche/Sidemenu.png}
-		\caption{Navigationsmenu}
+		\caption{Navigationsmenü}
 		\vspace{30px}
 	\end{minipage}
 	\hfill
@@ -450,10 +450,10 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools "Mock-up" über den
         \item[] Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
         \item[] Der Nutzer spielt Musik mit der vorinstallierten Musik-App ab.
         \item[] Der Nutzer startet die App.
-        \item[] Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Start/Stop Musikmodus\grqq .
+        \item[] Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Laufmodus\grqq .
         \item[] Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
         \item[] Der Nutzer beginnt zu gehen.
-        \item[] Der Nutzer startet den gewählten Modus.
+        \item[] Der Nutzer startet den gewählten Vorgang.
         \item[] Der Nutzer hört auf zu gehen.
         \item[] Die Musik wird pausiert.
         \item[] Der Nutzer geht weiter.
@@ -467,7 +467,7 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools "Mock-up" über den
         \item[] Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Zählmodus\grqq .
         \item[] Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
         \item[] Der Nutzer wählt eine verfügbare Übung aus. 
-        \item[] Der Nutzer startet den gewählten Modus.
+        \item[] Der Nutzer startet den gewählten Vorgang.
         \item[] Der Nutzer führt die Übung X (natürliche Zahl) mal aus.
         \item[] Der Nutzer stoppt den laufenden Modus.
         \item[] Die App zeigt X an.
