--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -209,7 +209,7 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
       }
 
       Einstellungen:
-      \item[/F250/] Der Nutzer kann seinen Namen abgeben und ändern.
+      \item[/F250/] Der Nutzer kann seinen Namen in den Einstellungen ändern.
       \item[/F260/] Der Nutzer kann die Sprache der App anpassen.
       \item[/F270/] Der Nutzer kann die gespeicherten \Gls{Vorgangsdaten} löschen.
       \item[/F280/] Der Nutzer kann die Steuerungsparameter anpassen. 
@@ -218,8 +218,8 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
       Sonstiges:
       \item[/F290/] Aufforderung der Angabe von Name, Schrittlänge und in-App Sprache bei Erstnutzung.
       \item[/F300/] Nutzer kann in der App seine gesamten \Gls{Vorgangsdaten} exportieren und importieren.
-      \item[/F320/] Anzeigen der gespeicherten Daten aus /F310/
       \item[/F310/] Speicherung der Summe der Schritte, Sit-ups und Liegestütze für jeden Tag, an dem ein Vorgang aktiv war (keine Rohdaten).
+      \item[/F320/] Anzeigen der gespeicherten Daten aus /F310/
       \end{itemize}
 
 
@@ -414,112 +414,112 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools "Mock-up" über den
   \end{itemize}
   \subsubsection{App}
   \begin{itemize}
-    \item[/Txxx/] Die Sensorrohdaten werden als Graphen angezeigt. (/190/)
-    \item[/Txxx/] Die Liegestützen oder Sit-ups werden von der App gezählt. (/200/)
-    \item[/Txxx/] Einen Trainingsplan zusammenstellen. (/F221/)
-    \item[/Txxx/] Die App gibt dem Nutzer über Sprachanweisung aus was die nächste Übung ist. (/F222/)
-    \item[/Txxx/] Nach der Übung wird die benötigte Zeit angezeigt. (/F223/)
-    \item[/Txxx/] Der Nutzer ändert seinen Namen. (/F250/)
-    \item[/Txxx/] Der Nutzer ändert die Sprache. (/F260/)
-    \item[/Txxx/] Trainingsdaten löschen. (F270)
-    \item[/Txxx/] Die Samplingrate verändern. (/F280/)
-    \item[/Txxx/] Die Schrittlänge verändern. (/F285/)
-    \item[/Txxx/] Bei der Erstnutzung wird der Nutzer aufgefordert seinen Namen, seine Schrittlänge und die Sprache zu setzen. (/F290/, /F250/)
-    \item[/Txxx/] Trainingsdaten importieren und exportieren. (/F300/)
-    \item[/Txxx/] Die gespeicherten Trainingsdaten ansehen. (/310/, /320/)
+    \item[/T190/] Die Sensorrohdaten werden als Graphen angezeigt.
+    \item[/T200/] Die Liegestützen oder Sit-ups werden von der App gezählt.
+    \item[/T210/] Musik stoppt wenn Nutzer stehen bleibt, läuft wenn der Nutzer läuft.
+    \item[/T221/] Einen Trainingsplan zusammenstellen.
+    \item[/T222/] Die App gibt dem Nutzer über Sprachanweisung aus was die nächste Übung ist.
+    \item[/T223/] Nach der Übung wird die benötigte Zeit angezeigt.
+    \item[/T250/] Der Nutzer ändert seinen Namen.
+    \item[/T260/] Der Nutzer ändert die Sprache.
+    \item[/T270/] Trainingsdaten löschen.
+    \item[/T280/] Die Samplingrate verändern.
+    \item[/T285/] Die Schrittlänge verändern.
+    \item[/T290/] Bei der Erstnutzung wird der Nutzer aufgefordert seinen Namen, seine Schrittlänge und die Sprache zu setzen.
+    \item[/T300/] Trainingsdaten importieren und exportieren.
+    \item[/T320/] Die gespeicherten Trainingsdaten ansehen.
    \end{itemize}
-      
-
+   
   \subsection{Szenarien}
     \subsubsection{Mussanforderungen}
-      \paragraph{Laufmodus (/F100/)}
+      \paragraph{Laufmodus (/T100/)}
       \begin{enumerate}
         \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
-        \item Nach dem Startvorgang der App wird in den Modus \glqq Laufmodus\grqq{} gewechselt. %%Automatisch im Laufmodus?
-        \item Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht. %%Würde ich als ersten Schritt machen, da durch das Anbringen der Kopfhörer laufend angezeigt werden könnte
         \item Der Nutzer startet die App.
+        \item Nach dem Startvorgang der App wird in den Modus \glqq Laufmodus\grqq{} gewechselt.
+        \item Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
         \item Die App zeigt dem Nutzer den Status \glqq stehend\grqq{} an.
         \item Sobald der Nutzer anfängt zu gehen zeigt die App \glqq gehend\grqq{} an.
         \item Sobald der Nutzer wieder still steht ändert sich der Zustand wieder zurück zu \glqq stehend\grqq. 
       \end{enumerate}
 
     \subsubsection{Wunschanforderungen}
-      %%vielleicht ohne absätze als Fließtext? -valle
-      \paragraph{Start/Stop Musikmodus (/F210/)}
-      \begin{itemize}
-        \item[] Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
-        \item[] Der Nutzer spielt Musik mit der vorinstallierten Musik-App ab.
-        \item[] Der Nutzer startet die App.
-        \item[] Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Laufmodus\grqq .
-        \item[] Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
-        \item[] Der Nutzer beginnt zu gehen.
-        \item[] Der Nutzer startet den gewählten Vorgang.
-        \item[] Der Nutzer hört auf zu gehen.
-        \item[] Die Musik wird pausiert.
-        \item[] Der Nutzer geht weiter.
-        \item[] Die Musik startet automatisch wieder.
-      \end{itemize}
-      
-      \paragraph{Zählmodus (/F200/)}
-      \begin{itemize}
-        \item[] Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
-        \item[] Der Nutzer startet die App.
-        \item[] Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Zählmodus\grqq .
-        \item[] Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
-        \item[] Der Nutzer wählt eine verfügbare Übung aus. 
-        \item[] Der Nutzer startet den gewählten Vorgang.
-        \item[] Der Nutzer führt die Übung X (natürliche Zahl) mal aus.
-        \item[] Der Nutzer stoppt den laufenden Modus.
-        \item[] Die App zeigt X an.
-      \end{itemize}
+        
+    \paragraph{Livedaten (/F190/)}
+      \begin{enumerate}
+        \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
+        \item Der Nutzer startet die App.
+        \item Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Livedaten\grqq . (/F190/)
+        \item Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
+        \item Der Nutzer startet den gewählten Vorgang.
+        \item Die App zeigt die korrekten Sensordaten an. (/T190/)
+      \end{enumerate}
 
-      \paragraph{Livedaten (/F190/)}
-      \begin{itemize}
-        \item[] Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
-        \item[] Der Nutzer startet die App.
-        \item[] Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Livedaten\grqq .
-        \item[] Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
-        \item[] Der Nutzer startet den gewählten Modus.
-        \item[] Die App zeigt die korrekten Sensordaten 
-      \end{itemize}
+    
+    \paragraph{Zählmodus (/F200/)}
+      \begin{enumerate}
+        \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
+        \item Der Nutzer startet die App.
+        \item Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Zählmodus\grqq . (/F200/)
+        \item Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
+        \item Der Nutzer wählt eine verfügbare Übung aus. 
+        \item Der Nutzer startet den gewählten Vorgang.
+        \item Der Nutzer führt die Übung X (natürliche Zahl) mal aus.
+        \item Der Nutzer stoppt den laufenden Vorgang.
+        \item Die App zeigt X an. (/T200/)
+      \end{enumerate}
 
+    
+    \paragraph{Start/Stop Musikmodus (/F210/)}
+      \begin{enumerate}
+        \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
+        \item Der Nutzer spielt Musik mit der vorinstallierten Musik-App ab.
+        \item Der Nutzer startet die App.
+        \item Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Laufmodus\grqq . (/F210/)
+        \item Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
+        \item Der Nutzer beginnt zu gehen.
+        \item Der Nutzer startet den gewählten Vorgang.
+        \item Der Nutzer hört auf zu gehen.
+        \item Die Musik wird pausiert. (/T210/)
+        \item Der Nutzer geht weiter.
+        \item Die Musik startet automatisch wieder. (/T210/)
+      \end{enumerate}
+  
       \paragraph{Lauschen\&Agieren (/F220/)}
-      \begin{itemize}
-        \item[] Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
-        \item[] Der Nutzer startet die App.
-        \item[] Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Lauschen\&Agieren\grqq .
-        \item[] Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
-        \item[] Der Nutzer stellt sich ein Training aus den verfügbaren Übungen zusammen (/F220/).
-        \item[] Der Nutzer startet den gewählten Modus.
-        \item[] Dem Nutzer wird per \Gls{TTS} die aktuelle Übung angesagt (/F230/).
-        \item[] Der Nutzer führt die Übung aus.
-        \item[] Die letzten beiden Schritte werden so lange wiederholt, bis alle ausgewählten Übungen erledigt sind.
-        \item[] Der Modus wird automatisch beendet.
-        \item[] Die App zeigt die benötigten Zeiten pro Übung an (/F240/).
-      \end{itemize}
+      \begin{enumerate}
+        \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
+        \item Der Nutzer startet die App.
+        \item Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Lauschen\&Agieren\grqq . (/F220/)
+        \item Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
+        \item Der Nutzer stellt sich ein Training aus den verfügbaren Übungen zusammen (/T221/).
+        \item Der Nutzer startet den gewählten Vorgang.
+        \item Dem Nutzer wird per \Gls{TTS} die aktuelle Übung angesagt (/T222/).
+        \item Der Nutzer führt die Übung aus.
+        \item Die letzten beiden Schritte werden so lange wiederholt, bis alle ausgewählten Übungen erledigt sind.
+        \item Der Vorgang wird automatisch beendet.
+        \item Die App zeigt die benötigten Zeiten pro Übung an (/T223/).
+      \end{enumerate}
 
-      \paragraph{Einstellungen (/F250/ bis /F285/)}
-      \textit{Voraussetzung: Test zu /F220/}
-      \begin{itemize}
-        \item[] Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
-        \item[] Der Nutzer startet die App.
-        \item[] Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Einstellungen\grqq .
-        \item[] Der Nutzer ändert seinen Namen (/F250/).
-        \item[] Der Nutzer ändert die Sprache (/F260/).
-        \item[] Dem Nutzer löscht die gespeicherten \Gls{Vorgangsdaten} (/F270/).
-        \item[] Dem Nutzer ändert die Steuerungsparameter (/F280/).
-        \item[] Der Nutzer ändert seine Schrittlänge (/F285/).
-        \item[] Der Nutzer beendet die App.
-        \item[] Der Nutzer startet die App.
-        \item[] Der Nutzer wechselt in den Modus \glqq Einstellungen\grqq .
-        \item[] Die Einstellungen sind exakt so, wie sie vorher eingestellt wurden.
-      \end{itemize}
+      \paragraph{Einstellungen (TF250/ bis /T285/)}
+      \textit{Voraussetzung: /T220/}
+      \begin{enumerate}
+        \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
+        \item Der Nutzer startet die App.
+        \item Nach dem Startvorgang der App wechselt der Nutzer in die Ansicht \glqq Einstellungen\grqq .
+        \item Der Nutzer ändert seinen Namen (/T250/).
+        \item Der Nutzer ändert die Sprache (/T260/).
+        \item Dem Nutzer löscht die gespeicherten \Gls{Vorgangsdaten} (/T270/).
+        \item Dem Nutzer ändert die Steuerungsparameter (/T280/).
+        \item Der Nutzer ändert seine Schrittlänge (/T285/).
+        \item Der Nutzer beendet die App.
+        \item Der Nutzer startet die App.
+        \item Der Nutzer wechselt in die Ansicht \glqq Einstellungen\grqq .
+        \item Die Einstellungen sind exakt so, wie sie vorher eingestellt wurden.
+      \end{enumerate}
 
-      \paragraph{Erstnutzung (/F290/)}
+      \paragraph{Erstnutzung (/T290/)}
 
-      \paragraph{Importieren/Exportieren (/F300/)}
-
-
+      \paragraph{Vorgangsdaten importieren/exportieren (/T300/)}
 
 
 \section{Entwicklungsumgebung}
