minor fixes in Testfälle

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -452,7 +452,7 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools \glqq Mock-up\grqq{
     \paragraph{Livedaten (/F190/)}
       \begin{enumerate}
         \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
-        \item Der Nutzer startet die App.
+        \item Der Nutzer startet die App. (/T070/)
         \item Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Livedaten\grqq . (/F190/)
         \item Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
         \item Der Nutzer startet den gewählten Vorgang.
@@ -463,7 +463,7 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools \glqq Mock-up\grqq{
     \paragraph{Zählmodus (/F200/)}
       \begin{enumerate}
         \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
-        \item Der Nutzer startet die App.
+        \item Der Nutzer startet die App. (/T070/)
         \item Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Zählmodus\grqq . (/F200/)
         \item Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
         \item Der Nutzer wählt eine verfügbare Übung aus. 
@@ -478,7 +478,7 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools \glqq Mock-up\grqq{
       \begin{enumerate}
         \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
         \item Der Nutzer spielt Musik mit der vorinstallierten Musik-App ab.
-        \item Der Nutzer startet die App.
+        \item Der Nutzer startet die App. (/T070/)
         \item Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Laufmodus\grqq . (/F210/)
         \item Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
         \item Der Nutzer beginnt zu gehen.
@@ -492,7 +492,7 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools \glqq Mock-up\grqq{
       \paragraph{Lauschen\&Agieren (/F220/)}
       \begin{enumerate}
         \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
-        \item Der Nutzer startet die App.
+        \item Der Nutzer startet die App. (/T070/)
         \item Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Lauschen\&Agieren\grqq . (/F220/)
         \item Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
         \item Der Nutzer stellt sich ein Training aus den verfügbaren Übungen zusammen (/T221/).
@@ -504,11 +504,11 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools \glqq Mock-up\grqq{
         \item Die App zeigt die benötigten Zeiten pro Übung an (/T223/).
       \end{enumerate}
 
-      \paragraph{Einstellungen (TF250/ bis /T285/)}
+      \paragraph{Einstellungen (F250/ bis /F285/)}
       \textit{Voraussetzung: /T220/}
       \begin{enumerate}
         \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
-        \item Der Nutzer startet die App.
+        \item Der Nutzer startet die App. (/T070/)
         \item Nach dem Startvorgang der App wechselt der Nutzer in die Ansicht \glqq Einstellungen\grqq .
         \item Der Nutzer ändert seinen Namen (/T250/).
         \item Der Nutzer ändert die Sprache (/T260/).
@@ -516,18 +516,18 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools \glqq Mock-up\grqq{
         \item Dem Nutzer ändert die Steuerungsparameter (/T280/).
         \item Der Nutzer ändert seine Schrittlänge (/T285/).
         \item Der Nutzer beendet die App.
-        \item Der Nutzer startet die App.
+        \item Der Nutzer startet die App. (/T070/)
         \item Der Nutzer wechselt in die Ansicht \glqq Einstellungen\grqq .
         \item Die Einstellungen sind exakt so, wie sie vorher eingestellt wurden.
       \end{enumerate}
 
       \paragraph{Erstnutzung (/T290/)}
       \begin{enumerate}
-        \item Der Nutzer startet die App zum ersten Mal.
-        \item Der Nutzer wird aufgefordert seinen Namen, seine Schrittlänge und die in-App Sprache zu setzen.
-        \item Danach wechselt die App in den \glqq{}Laufmodus \grqq{}.
+        \item Der Nutzer startet die App zum ersten Mal. (/T070/)
+        \item Der Nutzer wird aufgefordert seinen Namen, seine Schrittlänge und die in-App Sprache zu setzen. (/T290/)
+        \item Danach wechselt die App in den \glqq Laufmodus\grqq.
         \item Der Nutzer schließt die App.
-        \item Der Nutzer startet die App erneut und befindet sich nun im \glqq{}Laufmodus\grqq.
+        \item Der Nutzer startet die App erneut und befindet sich nun im \glqq Laufmodus\grqq. (/T070/)
         \item Sein Name, seine Schrittlänge und die in-App Sprache wurden gespeichert.
       \end{enumerate}
 
