--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -226,13 +226,8 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
       
       Sonstiges:
       \item[/F290/] Aufforderung der Angabe von Name, Schrittlänge und in-App Sprache bei Erstnutzung.
-<<<<<<< Updated upstream
       \item[/F300/] Nutzer kann in der App seine gesamten \Gls{Vorgangsdaten} exportieren, importieren und löschen.
-      \item[/F310/] Speicherung der Summe der Schritte, Sit-ups und Liegestütze für jeden Tag, an dem ein Vorgang aktiv war (keine Rohdaten).
-=======
-      \item[/F300/] Nutzer kann in der App seine gesamten \Gls{Vorgangsdaten} exportieren und importieren.
       \item[/F310/] Speicherung der Summe der Schritte, Sit-ups und Liegestütze für jeden Tag, an dem ein \Gls{Vorgang} aktiv war (keine \Gls{Rohdaten}).
->>>>>>> Stashed changes
       \item[/F320/] Anzeigen der gespeicherten Daten aus /F310/
       \end{itemize}
 
@@ -399,17 +394,18 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools \glqq Mock-up\grqq{
 \section{Globale Testfälle und Szenarien}
 %%TODO David
   \subsection{Globale Testfälle}
-  \subsubsection{Bibliothek}
+  \subsubsection{Mussanforderungen}
+  \paragraph{Bibliothek}
   \begin{itemize}
     \item[/T010/] Die Bibliothek kann die Daten des \Gls{IMU} in \Gls{Echtzeit} zur Verfügung stellen.
     \item[/T030/] Mithilfe der Bibliothek lassen sich (Abtastrate, Wertebereich Gyroskop/Beschleunigungssensor, Tiefpassfilter) ändern. 
     \item[/T040/] Die Bibliothek erlaubt es die Datenaufnahme des \Gls{IMU} zu starten und zu stoppen.
   \end{itemize}
-  \subsubsection{Erweiterungsmodul}
+  \paragraph{Erweiterungsmodul}
   \begin{itemize}
     \item[/T060/] Das Erweiterungsmodul erkennt Schritte.
   \end{itemize}
-  \subsubsection{App}
+  \paragraph{App}
     \begin{itemize}
     \item[/T070/] Der Nutzer kann die App über sein Smartphone starten. Die App startet im Laufmodus.
     \item[/T090/] Der Nutzer kann die Modi über ein einblendebares Menü wechseln, während ein Modus ausgewählt ist.
@@ -418,15 +414,16 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools \glqq Mock-up\grqq{
     \item[/T120/] Der Nutzer kann den modusspezifischen \Gls{Vorgang} stoppen.
     \item[/T130/] Die App zeigt nach Stoppen des Vorgangs das Vorgansresultats an bis neuer \Gls{Vorgang} gestartet wird.
   \end{itemize}
-\subsection{Wunschanforderungen}
-  \subsubsection{Erweiterungsmodul}
+
+\subsubsection{Wunschanforderungen}
+  \paragraph{Erweiterungsmodul}
     \begin{itemize}
     \item[/T140/] Ermittelt die aktuelle \Gls{Schrittfrequenz} korrekt.
     \item[/T150/] Zählt die Schritte des Nutzers.
     \item[/T170/] Erkennt Sit-ups.
     \item[/T180/] Erkennt Liegestütze.
   \end{itemize}
-  \subsubsection{App}
+  \paragraph{App}
   \begin{itemize}
     \item[/T190/] Die Sensorrohdaten werden als Graphen angezeigt.
     \item[/T200/] Die Liegestützen oder Sit-ups werden von der App gezählt.
@@ -514,7 +511,7 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools \glqq Mock-up\grqq{
         \item Die App zeigt die benötigten Zeiten pro Übung an (/T223/).
       \end{enumerate}
 
-      \paragraph{Einstellungen (F250/ bis /F285/)}
+      \paragraph{Einstellungen (/F250/ bis /F285/)}
       \textit{Voraussetzung: /T220/}
       \begin{enumerate}
         \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
@@ -531,7 +528,7 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools \glqq Mock-up\grqq{
         \item Die Einstellungen sind exakt so, wie sie vorher eingestellt wurden.
       \end{enumerate}
 
-      \paragraph{Erstnutzung (/T290/)}
+      \paragraph{Erstnutzung (/F290/)}
       \begin{enumerate}
         \item Der Nutzer startet die App zum ersten Mal. (/T070/)
         \item Der Nutzer wird aufgefordert seinen Namen, seine Schrittlänge und die in-App Sprache zu setzen. (/T290/)
@@ -541,7 +538,7 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools \glqq Mock-up\grqq{
         \item Sein Name, seine Schrittlänge und die in-App Sprache wurden gespeichert.
       \end{enumerate}
 
-      \paragraph{Vorgangsdaten importieren/exportieren (/T300/)}
+      \paragraph{Vorgangsdaten importieren/exportieren (/F300/)}
       \begin{enumerate}
         \item Der Nutzer startet die App. (/T070/)
         \item Der Nutzer wählt über das Hamburgermenü den Reiter \glqq{}Import/Export \grqq{}.
