--- a/Deckblatt.tex
+++ b/Deckblatt.tex
@@ -9,12 +9,7 @@
 
 
 
-
-
-
-
-
-
+	
 
 
 
@@ -28,6 +23,8 @@
 
 
 
+
+
 \end{verbatim}
 
 
@@ -35,6 +32,7 @@
 	%%Projekt:       & \projektName \\[1.2ex]
 	Auftraggeber:  & \auftraggeber\\[1.2ex]
 	Auftragnehmer: & \auftragnehmer\\[1.2ex]
+	Version:       & 1.0\\[1.2ex]
   \end{tabular}
 
 
