--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -28,7 +28,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Variablen                                 						 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\authorName}{David Höglinger, Jan Ettrich, Erwin Müller, Benedikt Rittner, Valentin Quapil}
+\newcommand{\authorName}{Tec O'Brain (Entwickler: David Höglinger, Jan Ettrich, Erwin Müller, Benedikt Rittner, Valentin Quapil)}
 \newcommand{\auftraggeber}{Karlsruhe Institute of Technology (Teco)}
 \newcommand{\auftragnehmer}{\authorName}
 \newcommand{\projektName}{Pflichtenheft Earables}
@@ -175,7 +175,7 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
   \subsection{Mussanforderungen}
     \subsubsection{Bibliothek}
     \begin{itemize}
-      \item[/F010/] Daten des \Gls{6-Achsen IMU} in \Gls{Echtzeit} zur Verfügung stellen.
+      \item[/F010/] Daten des \Gls{IMU} in \Gls{Echtzeit} zur Verfügung stellen.
       \item[/F030/] Messparameter (Abtastrate, Wertebereich Gyroskop/Beschleunigungssensor, Tiefpassfilter) ändern. 
       \item[/F040/] Datenaufnahme des \Gls{IMU} starten und stoppen.
     \end{itemize}
