Auto stash before merge of "master" and "origin/master"

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -157,8 +157,8 @@ Unser Produkt besteht aus zwei Teilen (der Bibliothek mit Erweiterungsmodul und 
       \end{itemize}
       \item\textsf{Erweiterungsmodul}
       \begin{itemize}
-        \item[] Softwareentwicklung im Bereich Schritterkennung 
-        \item[] Auswerten der von \Gls{Earables} generierten Daten für die Verwendung in einer App z.B. im Bereich Fitness oder in Spielen
+        \item[] Softwareentwicklung im Bereich Schritterkennung.
+        \item[] Auswerten der von \Gls{Earables} generierten Daten für die Verwendung in einer App z.B. im Bereich Fitness, aber auch als Nutzereingabe für andere interaktive Apps.
       \end{itemize}
       \item\textsf{App} Heimtraining, Sport,\dots
     \end{itemize}
