--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -142,7 +142,7 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
   \end{itemize}
 
 \section{Produkteinsatz}
-Unser Produkt besteht aus zwei Teilen (der Bibliothek mit Erweiterungsmodul und der App), dementsprechend gibt es auch zwei Zielgruppen und Anwendungsbereiche:
+Unser Produkt besteht aus drei Teilen (der Bibliothek, dazu das Erweiterungsmodul und der App), dementsprechend gibt es auch verschiedene Zielgruppen und Anwendungsbereiche:
   \subsection{Zielgruppe}
   \begin{itemize}
     \item\textsf{Bibliothek:} Softwareentwickler
@@ -163,8 +163,8 @@ Unser Produkt besteht aus zwei Teilen (der Bibliothek mit Erweiterungsmodul und 
       \item\textsf{App} Heimtraining, Sport,\dots
     \end{itemize}
   \subsection{Betriebsbedingungen der App}
-    \subsection{physikalische Umgebung}
-      Handy und Kopfhörer sollten nicht über zehn Meter voneinander entfernt werden, sodass eine Bluetooth-Verbindung möglich ist.
+    \subsection{Physikalische Umgebung}
+      Die physikalische Umgebung der Anwendung ist hardwareabhängig.
     \subsection{Sonstiges:}
     \begin{itemize}
       \item[] Betriebsdauer: "Akkuabhängig", keine weitere Grenzen 
@@ -172,6 +172,7 @@ Unser Produkt besteht aus zwei Teilen (der Bibliothek mit Erweiterungsmodul und 
     \end{itemize}
       
 \section{Produktumgebung}
+
 \subsection{Hardware} \textsf{Minimale Anforderungen:} Smartphone mit \Gls{BLE} Unterstützung.
 \subsection{Software} \textsf{Betriebssystem:} Unterstützung nur von Android ab Version 7 und iOS ab Version 10.
 
@@ -257,6 +258,7 @@ Unser Produkt besteht aus zwei Teilen (der Bibliothek mit Erweiterungsmodul und 
   \item[/NF040/] Bei nicht sinnvollen Angaben (z.B. negativen Werten in /F220/) wird das Starten des Vorgangs verhindert.
   \item[/NF050/] Bei Namensänderung (/F250/) werden gespeicherte Daten (siehe ev. /F300/) nicht verändert.
   \item[/NF060/] Bei Namensgebung sind nur Groß- und Kleinbuchstaben ohne Umlaute und Sonderzeichen erlaubt.
+  \item[] Handy und Kopfhörer sollten nicht über zehn Meter voneinander entfernt werden, sodass eine Bluetooth-Verbindung möglich ist. 
 \end{itemize}
 \subsection{Stabilität}
 \begin{itemize}
