--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -177,6 +177,7 @@ Es handelt sich bei der App um eine Smartphoneanwendung, daher wird das Produkt 
 \subsection{Software} \textsf{Betriebssystem:} Unterstützung nur von Android ab Version 7 und iOS ab Version 10.
 
 \section{Funktionale Anforderungen}
+Die Funktionalen Anforderungen gliedern sich in einen Pflichtteil (was unbedingt umgesetzt werden muss) und einen Wunschteil (Anforderungen, die umgesetzt werden sollen, aber nicht essenziell sind). Die Funktionalen Anforderungen spezifizieren auf Ebene der Bibliothek, des Erweiterungsmoduls und der App, welche Funktionen umgesetzt werden müssen bzw. können. 
   \subsection{Mussanforderungen}
     \subsubsection{Bibliothek}
     \begin{itemize}
