Produktdaten aktualisiert und Beschreibung ergänzt

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -239,13 +239,11 @@ Die Funktionalen Anforderungen gliedern sich in einen Pflichtteil (was unbedingt
 
 
 \section{Produktdaten}
+Die App soll dem Nutzer die Möglichkeit zur Verfügung stellen, seine Trainingsdaten auch nach Beenden der App weiterhin zu Nutzen. Zu diesem Zweck werden die Trainingsdaten auf dem Smartphone gespeichert; immer sobald ein Vorgang abgeschlossen ist.
 \begin{itemize}
 	\item[/PD010/] Es werden keine rohen Messdaten gespeichert.
-	\item[/PD020/] Die Einstellungen (Sprache, \Gls{Steuerungsparameter}, Messeinstellungen) sind zu speichern. 
-	\item[/PD030/] Es sind relevante Daten über den Nutzer, wie den Benutzernamen, zu speichern.
-	\item[/PD040/] Die \Gls{Vorgangsdaten} (Bestenliste und letzte Trainingseinheit) sind zu speichern. % Genauer definieren, was alles?
-	\item[/PD050/] Speicherung aller Vorgänge, die aktiv waren mit Datum, Uhrzeit und dem letzten Resultat (/F300/)%%nächstes Treffen: abklären, ob umsetzen
-	\item[/PD040/] Die Vorgangsdaten werden in der Form (Datum;Schritte;Liegestütze;Sit-ups) gespeichert. Für den Nutzer sind nur die Daten des letzten Monats aufsummiert zu sehen.
+	\item[/PD020/] Die Einstellungen (Sprache, \Gls{Steuerungsparameter}, Benutzernamen) sind zu speichern. 
+	\item[/PD040/] Die \Gls{Vorgangsdaten} werden auf dem Gerät in einer Datenbank gespeichert.
 \end{itemize}
 
 
