--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -232,9 +232,9 @@ Die Funktionalen Anforderungen gliedern sich in einen Pflichtteil (was unbedingt
       
       Sonstiges:
       \item[/F290/] Aufforderung der Angabe von Name, Schrittlänge und in-App Sprache bei Erstnutzung.
-      \item[/F300/] Nutzer kann in der App seine gesamten \Gls{Vorgangsdaten} exportieren, importieren und löschen.
+      \item[/F300/] Nutzer kann in der App seine gesamten \Gls{Vorgangsdaten} exportieren, importieren und löschen. Dabei wird das CSV-Format genutzt. 
       \item[/F310/] Speicherung der Summe der Schritte, Sit-ups und Liegestütze für jeden Tag, an dem ein \Gls{Vorgang} aktiv war (keine \Gls{Rohdaten}).
-      \item[/F320/] Anzeigen der gespeicherten Daten aus /F310/
+      \item[/F320/] Anzeigen der gespeicherten Daten aus /F310/.
       \end{itemize}
 
 
