Hintergrund, NFA ergänzt

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -165,10 +165,11 @@ Unser Produkt besteht aus zwei Teilen (der Bibliothek mit Erweiterungsmodul und 
   \subsection{Betriebsbedingungen der App}
     \subsection{physikalische Umgebung}
       Handy und Kopfhörer sollten nicht über zehn Meter voneinander entfernt werden, sodass eine Bluetooth-Verbindung möglich ist.
-    \subsection{Sonstiges:}
+    \subsection{Sonstiges}
     \begin{itemize}
-      \item[] Betriebsdauer: "Akkuabhängig", keine weitere Grenzen 
-      \item[] Qualifikation des Benutzers: Sollte Sportübungen selbstständig ausführen können
+      \item \textsf{Betriebsdauer:} \glqq Akkuabhängig\grqq, keine weitere Grenzen.
+      \item \textsf{Qualifikation des Nutzers:} Sollte Sportübungen selbstständig ausführen können.
+      \item \textsf{Vordergrund:} Die App muss im Vordergrund laufen, damit die Vorgänge funktionieren, siehe [/NF065/].
     \end{itemize}
       
 \section{Produktumgebung}
@@ -257,6 +258,7 @@ Unser Produkt besteht aus zwei Teilen (der Bibliothek mit Erweiterungsmodul und 
   \item[/NF040/] Bei nicht sinnvollen Angaben (z.B. negativen Werten in /F220/) wird das Starten des Vorgangs verhindert.
   \item[/NF050/] Bei Namensänderung (/F250/) werden gespeicherte Daten (siehe ev. /F300/) nicht verändert.
   \item[/NF060/] Bei Namensgebung sind nur Groß- und Kleinbuchstaben ohne Umlaute und Sonderzeichen erlaubt.
+  \item[/NF065/] Gerät die App durch Minimieren oder Ausschalten des Smartphone Bildschirms in den Hintergrund, wird der aktuelle Vorgang terminiert.
 \end{itemize}
 \subsection{Stabilität}
 \begin{itemize}
