--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -248,8 +248,8 @@ Die App soll dem Nutzer die Möglichkeit zur Verfügung stellen, seine Trainings
 
 
 \section{Nichtfunktionale Anforderungen}
-%TODO Jan Koordination
-
+Wie unten unter dem Punkt Qualitätszielbestimmungen aufgeführt legen wir unsere Priorität vor allem auf Korrektheit und Benutzerfreundlichkeit. Um die Benutzerfreundlichkeit zu gewährleisten, werden hier einige Anforderungen an die Stabilität, den Speicherplatz und das Laufzeitverhalten gestellt. Für das korrekte Funktionieren werden weitere allgemeine Anforderungen formuliert.
+\subsection{Allgemein}
 \begin{itemize}
   \item[/NF010/] Beim Ausführen der Funktion /F030/ soll die Datenaufnahme der \Gls{IMU} gestoppt werden.
   \item[/NF020/] Beim Wechseln zwischen Modi (/F090/) soll der aktuelle Modus terminiert werden.
